# concrete

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  bunfig.toml  entrypoint.sh  eslint.config.ts  index.html  makefile  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: static.yml
assets/: index-BV6dC8xL.js  index-BbRW7-nw.css
backend/: README.md  makefile  pyproject.toml  requirements-dev.txt
backend/api/: Dockerfile  README.md  data  makefile  requirements.txt  server.py
backend/scripts/: .gitignore  README.md  debug_ckpt.py  gp_lightning_dataloader.py  lightning_dataloader.py  makefile  mock_data.py  physics_gp.py  physics_gpr.py  physics_nn.py  physics_shared.py  prep_gp_ckpt.py  prep_gp_cov_ckpt.py  prep_nn_ckpt.py  run_gp.py  train.py
data/: concrete.json  contract-v2.txt  mortar.json  rock.json
frontend/: .env  eslint.config.ts  makefile  package.json
frontend/data/: concrete.json  mortar.json  region.json  rock.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: InputPanel.tsx  OutputPanel.tsx
frontend/src/themes/: ThemeContext.tsx  construction.ts  neutral.ts  notebook.ts  simpleDark.ts  simpleLight.ts
src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src/components/: InputPanel.tsx  OutputPanel.tsx
src/themes/: ThemeContext.tsx  construction.ts  index.ts  neutral.ts  notebook.ts  simpleDark.ts  simpleLight.ts  types.ts
